--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Peti",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "monk": "^7.0.0",
