--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "bad-words": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.0.0",
     "monk": "^7.0.0",
     "morgan": "^1.9.1"
   },
